Fixed modernizer issues